主页面的基本绘制

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#E91E68</color>
     <color name="colorPrimaryDark">#EC407A</color>
     <color name="colorAccent">#D81B60</color>
+
+
+
+    <color name="color_white">#ffffff</color>
 </resources>
