--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <style name="ToolbarTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!--toolbar背景色-->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <!--手机最上方通知栏颜色-->
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <!--toolbar里文本颜色-->
+        <item name="android:textColorPrimary">@color/color_white</item>
+    </style>
+
 </resources>
