--- a/app/src/main/res/layout/fragment_container_layout.xml
+++ b/app/src/main/res/layout/fragment_container_layout.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:orientation="vertical"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
     <com.google.android.material.tabs.TabLayout
             android:background="@color/colorPrimary"
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="96dp"/>
-    <TextView
-            android:textSize="20dp"
-            android:gravity="center"
-            android:text="内容"
+            android:layout_height="48dp"/>
+
+    <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+
+    </androidx.viewpager.widget.ViewPager>
 
 </LinearLayout>
