--- a/app/src/main/res/layout/nav_header_drawer_layout.xml
+++ b/app/src/main/res/layout/nav_header_drawer_layout.xml
@@ -2,11 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:gravity="center"
+              android:background="@color/colorPrimary"
               android:layout_width="match_parent"
-              android:layout_height="200dp">
+              android:layout_height="wrap_content">
+
+    <ImageView
+            android:layout_marginTop="20dp"
+            android:src="@mipmap/ic_launcher"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     <TextView
-            android:text="头部"
+            android:textColor="@color/common_white_text"
+            android:textSize="16dp"
+            android:layout_margin="15dp"
+            android:text="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
