--- a/app/src/main/res/layout/fragment_container_layout.xml
+++ b/app/src/main/res/layout/fragment_container_layout.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
     <com.google.android.material.tabs.TabLayout
+
+            app:tabMode="fixed"
+            app:tabIndicatorColor="@color/colorPrimary"
+            app:tabSelectedTextColor="@color/common_white_text"
             android:background="@color/colorPrimary"
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="48dp"/>
+            android:layout_height="wrap_content"/>
 
     <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager"
