修改主页面tab标题的实现方式

--- a/app/src/main/res/layout/fragment_container_layout.xml
+++ b/app/src/main/res/layout/fragment_container_layout.xml
@@ -6,9 +6,9 @@
               android:layout_height="match_parent">
 
     <com.google.android.material.tabs.TabLayout
-
+            app:tabIndicatorHeight="4dp"
             app:tabMode="fixed"
-            app:tabIndicatorColor="@color/colorPrimary"
+            app:tabIndicatorColor="@color/color_white"
             app:tabSelectedTextColor="@color/common_white_text"
             android:background="@color/colorPrimary"
             android:id="@+id/tab_layout"
