--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
 
 
     <color name="color_white">#ffffff</color>
+    <color name="color_black">#000000</color>
     <color name="common_white_background">#ffffff</color>
     <color name="common_black_text">#191919</color>
     <color name="common_white_text">#ffffff</color>
