--- a/app/src/main/res/layout/fragment_my_music.xml
+++ b/app/src/main/res/layout/fragment_my_music.xml
@@ -13,9 +13,8 @@
             android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
-                android:elevation="2dp"
                 app:cardCornerRadius="3.5dp"
-                android:layout_margin="4dp"
+                android:layout_margin="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -38,7 +37,7 @@
                         android:gravity="center_vertical"
                         app:item_icon="@drawable/ic_history_black"
                         app:item_name="@string/item_history"
-                        app:item_icon_color="@color/colorPrimary"
+                        app:item_icon_color="@color/amber"
                         android:layout_width="match_parent"
                         android:layout_height="48dp"/>
 
@@ -47,7 +46,7 @@
                         android:gravity="center_vertical"
                         app:item_icon="@drawable/item_favorite"
                         app:item_name="@string/item_favorite"
-                        app:item_icon_color="@color/colorPrimary"
+                        app:item_icon_color="@color/lightBlue"
                         android:layout_width="match_parent"
                         android:layout_height="48dp"/>
 
@@ -56,7 +55,7 @@
                         android:gravity="center_vertical"
                         app:item_icon="@drawable/ic_video_library"
                         app:item_name="@string/item_video"
-                        app:item_icon_color="@color/colorPrimary"
+                        app:item_icon_color="@color/lightGreen"
                         android:layout_width="match_parent"
                         android:layout_height="48dp"/>
 
@@ -65,13 +64,74 @@
                         android:gravity="center_vertical"
                         app:item_icon="@drawable/item_download"
                         app:item_name="@string/item_download"
-                        app:item_icon_color="@color/colorPrimary"
+                        app:item_icon_color="@color/color_black"
                         android:layout_width="match_parent"
                         android:layout_height="48dp"/>
 
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
+
+        <LinearLayout android:layout_width="match_parent"
+                      android:orientation="vertical"
+                      android:minWidth="200dp"
+                      android:layout_height="wrap_content">
+
+            <View style="@style/CommonLineStyle"/>
+
+            <LinearLayout
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp">
+
+                <RadioGroup
+                        android:layout_weight="1"
+                        android:orientation="horizontal"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent">
+
+                    <RadioButton
+                            style="@style/RadioButtonSongListStyle"
+                            android:text="@string/local_music"/>
+                    <RadioButton
+                            style="@style/RadioButtonSongListStyle"
+                            android:text="@string/online_list"/>
+                    <RadioButton
+                            style="@style/RadioButtonSongListStyle"
+                            android:text="@string/netease_list"/>
+
+                </RadioGroup>
+
+                <ImageView
+                        android:layout_margin="15dp"
+                        android:src="@drawable/ic_playlist_add"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                <ImageView
+                        android:layout_marginRight="15dp"
+                        android:src="@drawable/ic_more"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <View style="@style/CommonLineStyle"/>
+
+            <com.classic.common.MultipleStatusView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recyclerView_song_list"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+
+            </com.classic.common.MultipleStatusView>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
