--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,23 @@
         <attr name="item_icon_color" format="reference|color"/>
     </declare-styleable>
 
+    <!--我音歌单-->
+    <style name="RadioButtonSongListStyle">
+        <item name="android:textSize">15sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColor">@color/radio_button_text_color</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:button">@null</item>
+
+    </style>
+
+    <!--通用分割线-->
+    <style name="CommonLineStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1px</item>
+        <item name="android:background">@color/Grey400</item>
+    </style>
+
 </resources>
