--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,6 +6,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.activity.SplashActivity">
+    <ImageView
+            android:scaleType="fitXY"
+            android:src="@drawable/img_splash_bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     <Button
             android:id="@+id/jump"
