--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="common_black_text">#191919</color>
     <color name="common_white_text">#ffffff</color>
     <color name="backgroundColor">#E8E8E0</color>
+    <color name="color_DB4437">#DB4437</color>
+    <color name="color_05b962">#05b962</color>
 
 
 
