--- a/app/src/main/res/layout/fragment_my_music.xml
+++ b/app/src/main/res/layout/fragment_my_music.xml
@@ -13,6 +13,7 @@
             android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
+                android:elevation="0dp"
                 app:cardCornerRadius="3.5dp"
                 android:layout_margin="8dp"
                 android:layout_width="match_parent"
