--- a/app/src/main/res/layout/item_banner.xml
+++ b/app/src/main/res/layout/item_banner.xml
@@ -5,16 +5,18 @@
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/banner_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            app:riv_corner_radius="4dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:scaleType="center"/>
 
     <TextView
+            android:textSize="14sp"
             android:id="@+id/banner_title_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
