--- a/app/src/main/res/drawable/selector_bg_banner_tag.xml
+++ b/app/src/main/res/drawable/selector_bg_banner_tag.xml
@@ -4,14 +4,16 @@
         <shape>
             <solid android:color="@color/color_DB4437"/>
             <corners
-                    android:topLeftRadius="4dp"/>
+                    android:topLeftRadius="4dp"
+                    android:bottomRightRadius="4dp"/>
         </shape>
     </item>
     <item>
         <shape>
             <solid android:color="@color/color_DB4437"/>
             <corners
-                    android:topLeftRadius="@dimen/dp_4"/>
+                    android:topLeftRadius="4dp"
+                    android:bottomRightRadius="4dp"/>
         </shape>
     </item>
 </selector>
