--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,8 @@
     <color name="backgroundColor">#E8E8E0</color>
     <color name="color_DB4437">#DB4437</color>
     <color name="color_05b962">#05b962</color>
+    <color name="color_999999">#999999</color>
+    <color name="color_666666">#666666</color>
 
 
 
