--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -104,7 +104,10 @@
                 </LinearLayout>
 
             </LinearLayout>
-
+            <View
+                    android:background="@color/color_f2f2f2"
+                    android:layout_width="match_parent"
+                    android:layout_height="4dp"/>
             <!--热门歌手-->
             <LinearLayout
                     android:orientation="vertical"
@@ -145,6 +148,11 @@
 
             </LinearLayout>
 
+            <View
+                    android:background="@color/color_f2f2f2"
+                    android:layout_width="match_parent"
+                    android:layout_height="4dp"/>
+
             <!--推荐歌单-->
             <LinearLayout
                     android:orientation="vertical"
@@ -167,8 +175,8 @@
                             android:layout_height="wrap_content"/>
 
                     <TextView
-                            android:text="@string/recommend_song_list"
-                            android:textColor="@color/common_black_text"
+                            android:text="@string/song_list_square"
+                            android:textColor="@color/orange"
                             android:textSize="@dimen/common_text_size"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
@@ -183,7 +191,10 @@
                 </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView_song_list"
+                        android:layout_marginBottom="15dp"
+                        android:paddingLeft="5dp"
+                        android:paddingRight="5dp"
+                        android:id="@+id/rv_recommend"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
