--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,8 @@
     <color name="color_05b962">#05b962</color>
     <color name="color_999999">#999999</color>
     <color name="color_666666">#666666</color>
+    <color name="color_f2f2f2">#f2f2f2</color>
+
 
 
 
