--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<com.classic.common.MultipleStatusView
+        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/multiple_StatusView"
+        app:loadingView="@layout/layout_custom_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <androidx.core.widget.NestedScrollView
+            android:background="@color/color_white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -204,5 +207,4 @@
 
     </androidx.core.widget.NestedScrollView>
 
-
-</LinearLayout>
+</com.classic.common.MultipleStatusView>
