--- a/app/src/main/res/layout/fragment_mv_recommend.xml
+++ b/app/src/main/res/layout/fragment_mv_recommend.xml
@@ -4,12 +4,26 @@
               android:gravity="center"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <TextView
-            android:text="@string/snow_music"
-            android:textSize="20dp"
-            android:textColor="@color/common_black_text"
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:id="@+id/smartRefreshLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <com.scwang.smartrefresh.layout.header.ClassicsHeader
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+
 
 </LinearLayout>
