--- a/app/src/main/res/layout/nav_header_drawer_layout.xml
+++ b/app/src/main/res/layout/nav_header_drawer_layout.xml
@@ -6,8 +6,8 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
-    <ImageView
-            android:layout_marginTop="20dp"
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_marginTop="30dp"
             android:src="@mipmap/ic_launcher"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
