--- a/app/src/main/res/layout/activity_artist_detail.xml
+++ b/app/src/main/res/layout/activity_artist_detail.xml
@@ -14,14 +14,17 @@
             android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsingToolbarLayout"
                 android:fitsSystemWindows="true"
                 android:minHeight="?attr/actionBarSize"
                 app:contentScrim="?attr/colorPrimary"
-                app:expandedTitleMarginEnd="64dp"
-                app:expandedTitleMarginStart="40dp"
+                app:collapsedTitleTextAppearance="@style/CollapsedTitleTextStyle"
+                app:expandedTitleTextAppearance="@style/ExpandedTitleTextStyle"
+                app:expandedTitleMarginEnd="45dp"
+                app:expandedTitleMarginStart="30dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 android:layout_width="match_parent"
-                android:layout_height="240dp">
+                android:layout_height="260dp">
 
             <ImageView
                     android:scaleType="centerCrop"
@@ -30,12 +33,12 @@
                     android:layout_height="wrap_content"/>
 
             <androidx.appcompat.widget.Toolbar
-                    app:titleTextColor="@color/common_black_text"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?android:actionBarSize"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+                    app:layout_collapseMode="pin"/>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
