--- a/app/src/main/res/layout/activity_artist_detail.xml
+++ b/app/src/main/res/layout/activity_artist_detail.xml
@@ -18,6 +18,7 @@
                 android:fitsSystemWindows="true"
                 android:minHeight="?attr/actionBarSize"
                 app:contentScrim="?attr/colorPrimary"
+                app:statusBarScrim="@android:color/transparent"
                 app:collapsedTitleTextAppearance="@style/CollapsedTitleTextStyle"
                 app:expandedTitleTextAppearance="@style/ExpandedTitleTextStyle"
                 app:expandedTitleMarginEnd="45dp"
@@ -27,6 +28,9 @@
                 android:layout_height="260dp">
 
             <ImageView
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier="0.7"
+                    android:fitsSystemWindows="true"
                     android:scaleType="centerCrop"
                     android:id="@+id/iv_cover"
                     android:layout_width="match_parent"
