--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,10 @@
         <item name="android:textColorPrimary">@color/color_white</item>
     </style>
 
+    <style name="TranslucentTheme" parent="AppTheme">
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
     <!--侧滑菜单主题-->
     <style name="SideMenuTheme" parent="Widget.Design.NavigationView">
         <item name="android:textColor">@color/common_black_text</item>
