--- a/app/src/main/res/layout/fragment_artist_song.xml
+++ b/app/src/main/res/layout/fragment_artist_song.xml
@@ -5,9 +5,9 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-            android:text="歌曲"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
 </LinearLayout>
