--- a/app/src/main/res/layout/activity_artist_detail.xml
+++ b/app/src/main/res/layout/activity_artist_detail.xml
@@ -50,7 +50,7 @@
         <com.google.android.material.tabs.TabLayout
                 app:tabIndicatorHeight="2dp"
                 app:tabMode="fixed"
-                app:tabIndicatorColor="@color/color_white"
+                app:tabIndicatorColor="@color/orange"
                 app:tabSelectedTextColor="@color/common_black_text"
                 app:tabTextColor="@color/color_999999"
                 android:background="@color/color_white"
