--- a/app/src/main/res/layout/activity_song_list_detail.xml
+++ b/app/src/main/res/layout/activity_song_list_detail.xml
@@ -39,7 +39,7 @@
                     android:layout_height="match_parent"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                    app:layout_collapseMode="pin"
+                    app:layout_collapseMode="parallax"
                     android:layout_marginTop="120dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
