音乐信息的相关展示

--- a/app/src/main/res/layout/fragment_control_layout.xml
+++ b/app/src/main/res/layout/fragment_control_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="56dp"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent" android:layout_height="56dp"
               android:background="@color/color_white"
               android:orientation="vertical">
 
@@ -15,6 +15,8 @@
             android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
+                app:civ_border_width="4dp"
+                app:civ_border_color="@color/color_black"
                 android:id="@+id/iv_cover"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -28,20 +30,12 @@
                 android:orientation="vertical">
 
             <TextView
+                    android:id="@+id/songNameTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="歌名"
                     android:textColor="@color/common_black_text"
                     android:textSize="15sp"/>
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:text="歌手"
-                    android:textColor="@color/color_999999"
-                    android:textSize="13sp"/>
-
         </LinearLayout>
 
         <ImageView
