--- a/app/src/main/res/layout/fragment_player_cover.xml
+++ b/app/src/main/res/layout/fragment_player_cover.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:gravity="center"
-              android:background="@color/color_black"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -53,9 +53,12 @@
     </LinearLayout>
 
     <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_color="@color/Grey900"
+            app:civ_border_width="30dp"
+            android:id="@+id/iv_cover"
             android:src="@drawable/default_cover"
-            android:layout_marginTop="30dp"
-            android:layout_width="200dp"
-            android:layout_height="200dp"/>
+            android:layout_marginTop="50dp"
+            android:layout_width="225dp"
+            android:layout_height="225dp"/>
 
 </LinearLayout>
