--- a/app/src/main/res/layout/activity_artist_detail.xml
+++ b/app/src/main/res/layout/activity_artist_detail.xml
@@ -65,6 +65,7 @@
 
 
     <androidx.viewpager2.widget.ViewPager2
+            android:background="@color/color_white"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:id="@+id/viewPager2"
             android:layout_width="match_parent"
