--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,7 +53,6 @@
     <color name="translucent_white_24p">#3DFFFFFF</color>
 
 
-
     <color name="color_DB4437">#DB4437</color>
     <color name="color_05b962">#05b962</color>
     <color name="color_999999">#999999</color>
@@ -63,5 +62,12 @@
     <color name="color_08b106">#08b106</color>
     <color name="color_8009bb07">#8009bb07</color>
     <color name="color_1f000000">#1f000000</color>
+
+
+    <color name="lrc_normal_text_color">#9E9E9E</color>
+    <color name="lrc_current_text_color">#FF4081</color>
+    <color name="lrc_timeline_text_color">#ffffff</color>
+    <color name="lrc_timeline_color">#809E9E9E</color>
+    <color name="lrc_time_text_color">#809E9E9E</color>
 
 </resources>
