--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,6 +62,8 @@
     <color name="color_08b106">#08b106</color>
     <color name="color_8009bb07">#8009bb07</color>
     <color name="color_1f000000">#1f000000</color>
+    <color name="color_e5e5e5">#e5e5e5</color>
+    <color name="color_0D000000">#0D000000</color>
 
 
     <color name="lrc_normal_text_color">#9E9E9E</color>
