--- a/app/src/main/res/layout/item_play_queue_window.xml
+++ b/app/src/main/res/layout/item_play_queue_window.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
               android:orientation="horizontal"
+              android:id="@+id/clickView"
               android:paddingLeft="15dp"
+              android:background="@drawable/selector_item_click_background_white_gray"
               android:paddingRight="15dp"
               android:gravity="center_vertical"
               android:layout_width="match_parent"
-              android:layout_height="40dp">
-
+              android:layout_height="48dp">
 
     <ImageView
             android:id="@+id/playingIv"
