1、数据哭的创建

--- a/app/src/main/res/layout/fragment_control_layout.xml
+++ b/app/src/main/res/layout/fragment_control_layout.xml
@@ -44,6 +44,7 @@
                 android:src="@drawable/ic_play_big"/>
 
         <ImageView
+                android:id="@+id/playQueueIv"
                 android:padding="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
